--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     </div>
     <div class="six">
       <img src="img/lydia2.png" alt="" class="lydia-dp" data-node-name="imagePath">
-      <img src="img/hat.svg" alt="" class="hat">
+      <img src="img/hat.svg" alt="" class="hat" style="transform: rotate(-40deg);">
       <div class="wish">
         <h3 class="wish-hbd" data-node-name="wishHeading">Feliz Aniversário!</h3>
         <h5 data-node-name="wishText">Que os js.prototypes estejam sempre com você! ;)</h5>
